--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,6 +10,10 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Work+Sans"
+      rel="stylesheet"
+    />
     <title>Boohkr</title>
   </head>
 
